Fixing bleed-through of BG within header.

--- a/source/stylesheets/partials/_header.sass
+++ b/source/stylesheets/partials/_header.sass
@@ -1,10 +1,10 @@
 body
   #header
     z-index: 10
-    padding: 0
     background: white
     text-align: center
     +padded
+    +clearfix
 
     h1
       margin: 0
